# rust_app

./: .gitignore  Cargo.toml  WORKSPACE
src/: BUILD.bazel  main.rs
src/app/: BUILD.bazel  app.rs
